--- a/src/blocks/index/diet.html
+++ b/src/blocks/index/diet.html
@@ -11,69 +11,77 @@
       </div>
       <form class="diet__container-form" action="#">
         <div class="diet__container-form-title">Ваша цель</div>
-        <div class="diet__input">
-          <input type="radio" name="target" id="target1" value="Похудеть"/>
-          <label for="target1">
-            <div class="diet__input-bg"></div>
-            <div class="diet__input-title">Похудеть</div>
-            <div class="diet__input-text">-5 кг за мес., еще какой-то небольшой текст в описание</div>
-            <div class="diet__input-img"><img src="/images/diet-img1.png"/></div>
-          </label>
-        </div>
-        <div class="diet__input">
-          <input type="radio" name="target" id="target2" value="Сохранить вес"/>
-          <label for="target2">
-            <div class="diet__input-bg"></div>
-            <div class="diet__input-title">Сохранить<br> вес</div>
-            <div class="diet__input-text">Вкусно и просто, какой-то текст</div>
-            <div class="diet__input-img"><img src="/images/diet-img2.png"/></div>
-          </label>
-        </div>
-        <div class="diet__input">
-          <input type="radio" name="target" id="target3" value="Не готовить"/>
-          <label for="target3">
-            <div class="diet__input-bg"></div>
-            <div class="diet__input-title">Не готовить</div>
-            <div class="diet__input-text">+5 часов в неделю, какой-то небольшой текст в описание</div>
-            <div class="diet__input-img"><img src="/images/diet-img3.png"/></div>
-          </label>
+        <div class="diet__inputs">
+          <div class="diet__input">
+            <input type="radio" name="target" id="target1" value="Похудеть"/>
+            <label for="target1">
+              <div class="diet__input-bg"></div>
+              <div class="diet__input-title">Похудеть</div>
+              <div class="diet__input-text">-5 кг за мес., еще какой-то небольшой текст в описание</div>
+              <div class="diet__input-img"><img src="/images/diet-img1.png"/></div>
+            </label>
+          </div>
+          <div class="diet__input">
+            <input type="radio" name="target" id="target2" value="Сохранить вес"/>
+            <label for="target2">
+              <div class="diet__input-bg"></div>
+              <div class="diet__input-title">Сохранить<br> вес</div>
+              <div class="diet__input-text">Вкусно и просто, какой-то текст</div>
+              <div class="diet__input-img"><img src="/images/diet-img2.png"/></div>
+            </label>
+          </div>
+          <div class="diet__input">
+            <input type="radio" name="target" id="target3" value="Не готовить"/>
+            <label for="target3">
+              <div class="diet__input-bg"></div>
+              <div class="diet__input-title">Не готовить</div>
+              <div class="diet__input-text">+5 часов в неделю, какой-то небольшой текст в описание</div>
+              <div class="diet__input-img"><img src="/images/diet-img3.png"/></div>
+            </label>
+          </div>
         </div>
         <div class="diet__container-form-title">Выберите тип рациона</div>
-        <div class="diet__type">
-          <input type="radio" name="type" id="type1" value="Снижение"/>
-          <label for="type1"><img src="/images/chart-with-downwards-trend_1f4c9.png"/><span>Снижение</span></label>
-        </div>
-        <div class="diet__type">
-          <input type="radio" name="type" id="type2" value="Детокс"/>
-          <label for="type2"><img src="/images/leafy-green_1f96c.png"/><span>Детокс</span></label>
-        </div>
-        <div class="diet__type">
-          <input type="radio" name="type" id="type3" value="Баланс"/>
-          <label for="type3"><img src="/images/person-in-lotus-position_1f9d8.png"/><span>Баланс</span></label>
-        </div>
-        <div class="diet__type">
-          <input type="radio" name="type" id="type4" value="Веган"/>
-          <label for="type4"><img src="/images/broccoli_1f966.png"/><span>Веган</span></label>
-        </div>
-        <div class="diet__type">
-          <input type="radio" name="type" id="type5" value="Постное"/>
-          <label for="type5"><img src="/images/green-salad_1f957.png"/><span>Постное</span></label>
-        </div>
-        <div class="diet__type">
-          <input type="radio" name="type" id="type6" value="Без лактозы"/>
-          <label for="type6"><img src="/images/glass-of-milk_1f95b.png"/><span>Без лактозы</span></label>
+        <div class="diet__types">
+          <div class="diet__type">
+            <input type="radio" name="type" id="type1" value="Снижение"/>
+            <label for="type1"><img src="/images/chart-with-downwards-trend_1f4c9.png"/><span>Снижение</span></label>
+          </div>
+          <div class="diet__type">
+            <input type="radio" name="type" id="type2" value="Детокс"/>
+            <label for="type2"><img src="/images/leafy-green_1f96c.png"/><span>Детокс</span></label>
+          </div>
+          <div class="diet__type">
+            <input type="radio" name="type" id="type3" value="Баланс"/>
+            <label for="type3"><img src="/images/person-in-lotus-position_1f9d8.png"/><span>Баланс</span></label>
+          </div>
+          <div class="diet__type">
+            <input type="radio" name="type" id="type4" value="Веган"/>
+            <label for="type4"><img src="/images/broccoli_1f966.png"/><span>Веган</span></label>
+          </div>
+          <div class="diet__type">
+            <input type="radio" name="type" id="type5" value="Постное"/>
+            <label for="type5"><img src="/images/green-salad_1f957.png"/><span>Постное</span></label>
+          </div>
+          <div class="diet__type">
+            <input type="radio" name="type" id="type6" value="Без лактозы"/>
+            <label for="type6"><img src="/images/glass-of-milk_1f95b.png"/><span>Без лактозы</span></label>
+          </div>
         </div>
         <div class="diet__blocks">
           <div class="diet__blocks-block">
             <div class="diet__blocks-block-title">Выберите тип рациона</div>
-            <div class="diet__blocks-block__type">
-              <input type="radio" name="count" id="count1" value="1000 ккал"/>
-              <label for="count1"><span>1000 ккал</span></label>
+            <div class="diet__blocks-block__types">
+              <div class="diet__blocks-block__type">
+                <input type="radio" name="count" id="count1" value="1000 ккал"/>
+                <label for="count1"><span>1000 ккал</span></label>
+              </div>
+              <div class="diet__blocks-block__type">
+                <input type="radio" name="count" id="count2" value="1500 ккал"/>
+                <label for="count2"><span>1500 ккал</span></label>
+              </div>
             </div>
-            <div class="diet__blocks-block__type">
-              <input type="radio" name="count" id="count2" value="1500 ккал"/>
-              <label for="count2"><span>1500 ккал</span></label>
-            </div>
+          </div>
+          <div class="diet__blocks-block">
             <div class="diet__blocks-block-text">
               <p>Программа состоит из блюд с равным соотношением белков и углеводов и оптимальным количеством жиров. Такое сочетание позволяет поддерживать текущий вес, улучшить состояние здоровья и самочувствие, нормализовать обмен веществ и наделить организм ценными витаминами и элементами.</p>
               <p>В программе<strong>5 приемов пищи.</strong></p>
