--- a/src/blocks/index/price.html
+++ b/src/blocks/index/price.html
@@ -3,7 +3,7 @@
   <div class="g-wrapper">
     <div class="price__container">
       <div class="price__container-titles">
-        <div class="price__container-titles-title">Подбор рациона</div>
+        <div class="price__container-titles-title">Цены и тарифы</div>
         <div class="price__container-titles-item">
           <div class="price__container-titles-item-container"><span>Это легко! Раз, два, три.</span><span>Закажите и получите.</span><img src="/images/Flexing Muscles Emoji.png"/></div>
         </div>
