--- a/src/blocks/index/top.html
+++ b/src/blocks/index/top.html
@@ -17,7 +17,7 @@
             <div class="top__container-item">
               <div class="top__container-item-title">Идем</div>
               <div class="top__container-item-subtitle">На снижение!</div>
-              <div class="top__container-item-desc">с нами легко похудеть<br> быстро и вкусно</div><a class="top__container-item-button" href="#"><span>Начать худеть</span></a>
+              <div class="top__container-item-desc">с нами легко похудеть<br> быстро и вкусно</div><a class="top__container-item-button" href="#"><span>Начать худеть!</span></a>
             </div>
           </div>
         </div>
