--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,23 @@
         </div>
       </div>
     </div>
+    <div class="headerMob">
+      <div class="headerMob__phone"><a href="tel:8 (800) 700-40-68"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.5289 11.0148H13.5946C13.3799 11.0148 13.1857 11.1362 13.1008 11.323L12.2732 13.1587C12.1873 13.3497 11.9565 13.4474 11.7346 13.3871C8.10309 12.3886 5.31706 9.46358 4.63621 5.93575C4.60401 5.76764 4.71316 5.59189 4.89657 5.51802L7.03484 4.64943C7.23257 4.56877 7.3605 4.38453 7.3605 4.18076V2.34509C7.3605 1.05198 6.252 0 4.88941 0H1.8323C1.13534 0 0.518912 0.456792 0.365923 1.08594C0.123465 2.08274 0 3.12453 0 4.18076C0 5.07991 0.0823102 5.91623 0.251404 6.73472C1.29012 11.9989 5.49242 16.2526 10.958 17.5712C12.1461 17.8557 13.3584 18 14.5618 18C15.2856 18 16.0183 17.9474 16.7412 17.8446C17.4587 17.7427 18 17.1365 18 16.4326V13.3599C18 12.0668 16.8915 11.0148 15.5289 11.0148Z" fill="#74C361"/></svg></a></div><a class="headerMob__logo" href="#"><img src="/images/small-logo.png"/></a>
+      <div class="headerMob__menu"><svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="35" height="4" rx="2" fill="#535353"/><rect y="9" width="35" height="4" rx="2" fill="#535353"/><rect y="18" width="35" height="4" rx="2" fill="#535353"/></svg></div>
+    </div>
+    <div class="mobMenu">
+      <div class="mobMenu__block">
+        <div class="mobMenu__block-phone"><a href="tel:8 (800) 700-40-68"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.5289 11.0148H13.5946C13.3799 11.0148 13.1857 11.1362 13.1008 11.323L12.2732 13.1587C12.1873 13.3497 11.9565 13.4474 11.7346 13.3871C8.10309 12.3886 5.31706 9.46358 4.63621 5.93575C4.60401 5.76764 4.71316 5.59189 4.89657 5.51802L7.03484 4.64943C7.23257 4.56877 7.3605 4.38453 7.3605 4.18076V2.34509C7.3605 1.05198 6.252 0 4.88941 0H1.8323C1.13534 0 0.518912 0.456792 0.365923 1.08594C0.123465 2.08274 0 3.12453 0 4.18076C0 5.07991 0.0823102 5.91623 0.251404 6.73472C1.29012 11.9989 5.49242 16.2526 10.958 17.5712C12.1461 17.8557 13.3584 18 14.5618 18C15.2856 18 16.0183 17.9474 16.7412 17.8446C17.4587 17.7427 18 17.1365 18 16.4326V13.3599C18 12.0668 16.8915 11.0148 15.5289 11.0148Z" fill="#74C361"/></svg></a></div><a class="mobMenu__block-logo" href="#"><img src="/images/small-logo.png"/></a>
+        <div class="mobMenu__block-close"><svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.580839 0.580833C1.35528 -0.193611 2.6109 -0.193611 3.38535 0.580833L24.4192 21.6147C25.1936 22.3891 25.1936 23.6447 24.4192 24.4192C23.6447 25.1936 22.3891 25.1936 21.6147 24.4192L0.580839 3.38534C-0.193605 2.6109 -0.193605 1.35528 0.580839 0.580833Z" fill="#535353"/><path d="M24.4192 0.580833C25.1936 1.35528 25.1936 2.6109 24.4192 3.38534L3.38534 24.4192C2.6109 25.1936 1.35528 25.1936 0.580833 24.4192C-0.193611 23.6447 -0.193611 22.3891 0.580833 21.6147L21.6147 0.580833C22.3891 -0.193611 23.6447 -0.193611 24.4192 0.580833Z" fill="#535353"/></svg></div>
+      </div>
+      <div class="mobMenu__menu">
+        <div class="mobMenu__menu-location"><span>Ваш город:</span><span>Москва</span><svg width="9" height="6" viewBox="0 0 9 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.50007 5.27895L0.68483 0.710479L8.30006 0.677353L4.50007 5.27895Z" fill="#74C361"/><path fill-rule="evenodd" clip-rule="evenodd" d="M8.31531 0H0.684828C0.416876 0 0.179413 0.152618 0.0656652 0.397516C-0.0480826 0.642413 -0.0123165 0.923987 0.159478 1.13162L3.97472 5.75155C4.10547 5.90949 4.29661 6 4.50007 6C4.70352 6 4.89467 5.90949 5.02542 5.75155V5.75214L8.84066 1.13103C9.01245 0.923395 9.04822 0.642413 8.93388 0.397516C8.82072 0.152618 8.58326 0 8.31531 0Z" fill="#74C361"/></svg></div>
+        <div class="mobMenu__menu-items"><a class="mobMenu__menu-items-item" href="#">Как это работает?</a><a class="mobMenu__menu-items-item" href="#">Подбор рациона</a><a class="mobMenu__menu-items-item" href="#">Пройти оценку тела</a><a class="mobMenu__menu-items-item" href="#">Доставка и оплата</a><a class="mobMenu__menu-items-item" href="#">FAQ</a></div>
+        <div class="mobMenu__menu-button">
+          <div><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M15.5289 11.0148H13.5946C13.3799 11.0148 13.1857 11.1362 13.1008 11.323L12.2732 13.1587C12.1873 13.3497 11.9565 13.4474 11.7346 13.3871C8.10309 12.3886 5.31706 9.46358 4.63621 5.93575C4.60401 5.76764 4.71316 5.59189 4.89657 5.51802L7.03484 4.64943C7.23257 4.56877 7.3605 4.38453 7.3605 4.18076V2.34509C7.3605 1.05198 6.252 0 4.88941 0H1.8323C1.13534 0 0.518912 0.456792 0.365923 1.08594C0.123465 2.08274 0 3.12453 0 4.18076C0 5.07991 0.0823103 5.91623 0.251404 6.73472C1.29012 11.9989 5.49242 16.2526 10.958 17.5712C12.1461 17.8557 13.3584 18 14.5618 18C15.2856 18 16.0183 17.9474 16.7412 17.8446C17.4587 17.7427 18 17.1365 18 16.4326V13.3599C18 12.0668 16.8915 11.0148 15.5289 11.0148Z" fill="white"/></svg><span>Заказать звонок</span></div>
+        </div>
+      </div>
+    </div>
     <div class="swiper-container swiper-container-top">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -51,7 +68,7 @@
                 <div class="top__container-item">
                   <div class="top__container-item-title">Идем</div>
                   <div class="top__container-item-subtitle">На снижение!</div>
-                  <div class="top__container-item-desc">с нами легко похудеть<br> быстро и вкусно</div><a class="top__container-item-button" href="#"><span>Начать худеть</span></a>
+                  <div class="top__container-item-desc">с нами легко похудеть<br> быстро и вкусно</div><a class="top__container-item-button" href="#"><span>Начать худеть!</span></a>
                 </div>
               </div>
             </div>
@@ -151,69 +168,77 @@
           </div>
           <form class="diet__container-form" action="#">
             <div class="diet__container-form-title">Ваша цель</div>
-            <div class="diet__input">
-              <input type="radio" name="target" id="target1" value="Похудеть"/>
-              <label for="target1">
-                <div class="diet__input-bg"></div>
-                <div class="diet__input-title">Похудеть</div>
-                <div class="diet__input-text">-5 кг за мес., еще какой-то небольшой текст в описание</div>
-                <div class="diet__input-img"><img src="/images/diet-img1.png"/></div>
-              </label>
-            </div>
-            <div class="diet__input">
-              <input type="radio" name="target" id="target2" value="Сохранить вес"/>
-              <label for="target2">
-                <div class="diet__input-bg"></div>
-                <div class="diet__input-title">Сохранить<br> вес</div>
-                <div class="diet__input-text">Вкусно и просто, какой-то текст</div>
-                <div class="diet__input-img"><img src="/images/diet-img2.png"/></div>
-              </label>
-            </div>
-            <div class="diet__input">
-              <input type="radio" name="target" id="target3" value="Не готовить"/>
-              <label for="target3">
-                <div class="diet__input-bg"></div>
-                <div class="diet__input-title">Не готовить</div>
-                <div class="diet__input-text">+5 часов в неделю, какой-то небольшой текст в описание</div>
-                <div class="diet__input-img"><img src="/images/diet-img3.png"/></div>
-              </label>
+            <div class="diet__inputs">
+              <div class="diet__input">
+                <input type="radio" name="target" id="target1" value="Похудеть"/>
+                <label for="target1">
+                  <div class="diet__input-bg"></div>
+                  <div class="diet__input-title">Похудеть</div>
+                  <div class="diet__input-text">-5 кг за мес., еще какой-то небольшой текст в описание</div>
+                  <div class="diet__input-img"><img src="/images/diet-img1.png"/></div>
+                </label>
+              </div>
+              <div class="diet__input">
+                <input type="radio" name="target" id="target2" value="Сохранить вес"/>
+                <label for="target2">
+                  <div class="diet__input-bg"></div>
+                  <div class="diet__input-title">Сохранить<br> вес</div>
+                  <div class="diet__input-text">Вкусно и просто, какой-то текст</div>
+                  <div class="diet__input-img"><img src="/images/diet-img2.png"/></div>
+                </label>
+              </div>
+              <div class="diet__input">
+                <input type="radio" name="target" id="target3" value="Не готовить"/>
+                <label for="target3">
+                  <div class="diet__input-bg"></div>
+                  <div class="diet__input-title">Не готовить</div>
+                  <div class="diet__input-text">+5 часов в неделю, какой-то небольшой текст в описание</div>
+                  <div class="diet__input-img"><img src="/images/diet-img3.png"/></div>
+                </label>
+              </div>
             </div>
             <div class="diet__container-form-title">Выберите тип рациона</div>
-            <div class="diet__type">
-              <input type="radio" name="type" id="type1" value="Снижение"/>
-              <label for="type1"><img src="/images/chart-with-downwards-trend_1f4c9.png"/><span>Снижение</span></label>
-            </div>
-            <div class="diet__type">
-              <input type="radio" name="type" id="type2" value="Детокс"/>
-              <label for="type2"><img src="/images/leafy-green_1f96c.png"/><span>Детокс</span></label>
-            </div>
-            <div class="diet__type">
-              <input type="radio" name="type" id="type3" value="Баланс"/>
-              <label for="type3"><img src="/images/person-in-lotus-position_1f9d8.png"/><span>Баланс</span></label>
-            </div>
-            <div class="diet__type">
-              <input type="radio" name="type" id="type4" value="Веган"/>
-              <label for="type4"><img src="/images/broccoli_1f966.png"/><span>Веган</span></label>
-            </div>
-            <div class="diet__type">
-              <input type="radio" name="type" id="type5" value="Постное"/>
-              <label for="type5"><img src="/images/green-salad_1f957.png"/><span>Постное</span></label>
-            </div>
-            <div class="diet__type">
-              <input type="radio" name="type" id="type6" value="Без лактозы"/>
-              <label for="type6"><img src="/images/glass-of-milk_1f95b.png"/><span>Без лактозы</span></label>
+            <div class="diet__types">
+              <div class="diet__type">
+                <input type="radio" name="type" id="type1" value="Снижение"/>
+                <label for="type1"><img src="/images/chart-with-downwards-trend_1f4c9.png"/><span>Снижение</span></label>
+              </div>
+              <div class="diet__type">
+                <input type="radio" name="type" id="type2" value="Детокс"/>
+                <label for="type2"><img src="/images/leafy-green_1f96c.png"/><span>Детокс</span></label>
+              </div>
+              <div class="diet__type">
+                <input type="radio" name="type" id="type3" value="Баланс"/>
+                <label for="type3"><img src="/images/person-in-lotus-position_1f9d8.png"/><span>Баланс</span></label>
+              </div>
+              <div class="diet__type">
+                <input type="radio" name="type" id="type4" value="Веган"/>
+                <label for="type4"><img src="/images/broccoli_1f966.png"/><span>Веган</span></label>
+              </div>
+              <div class="diet__type">
+                <input type="radio" name="type" id="type5" value="Постное"/>
+                <label for="type5"><img src="/images/green-salad_1f957.png"/><span>Постное</span></label>
+              </div>
+              <div class="diet__type">
+                <input type="radio" name="type" id="type6" value="Без лактозы"/>
+                <label for="type6"><img src="/images/glass-of-milk_1f95b.png"/><span>Без лактозы</span></label>
+              </div>
             </div>
             <div class="diet__blocks">
               <div class="diet__blocks-block">
                 <div class="diet__blocks-block-title">Выберите тип рациона</div>
-                <div class="diet__blocks-block__type">
-                  <input type="radio" name="count" id="count1" value="1000 ккал"/>
-                  <label for="count1"><span>1000 ккал</span></label>
+                <div class="diet__blocks-block__types">
+                  <div class="diet__blocks-block__type">
+                    <input type="radio" name="count" id="count1" value="1000 ккал"/>
+                    <label for="count1"><span>1000 ккал</span></label>
+                  </div>
+                  <div class="diet__blocks-block__type">
+                    <input type="radio" name="count" id="count2" value="1500 ккал"/>
+                    <label for="count2"><span>1500 ккал</span></label>
+                  </div>
                 </div>
-                <div class="diet__blocks-block__type">
-                  <input type="radio" name="count" id="count2" value="1500 ккал"/>
-                  <label for="count2"><span>1500 ккал</span></label>
-                </div>
+              </div>
+              <div class="diet__blocks-block">
                 <div class="diet__blocks-block-text">
                   <p>Программа состоит из блюд с равным соотношением белков и углеводов и оптимальным количеством жиров. Такое сочетание позволяет поддерживать текущий вес, улучшить состояние здоровья и самочувствие, нормализовать обмен веществ и наделить организм ценными витаминами и элементами.</p>
                   <p>В программе<strong>5 приемов пищи.</strong></p>
@@ -266,7 +291,7 @@
       <div class="g-wrapper">
         <div class="price__container">
           <div class="price__container-titles">
-            <div class="price__container-titles-title">Подбор рациона</div>
+            <div class="price__container-titles-title">Цены и тарифы</div>
             <div class="price__container-titles-item">
               <div class="price__container-titles-item-container"><span>Это легко! Раз, два, три.</span><span>Закажите и получите.</span><img src="/images/Flexing Muscles Emoji.png"/></div>
             </div>
