--- a/src/blocks/index/price.html
+++ b/src/blocks/index/price.html
@@ -24,6 +24,7 @@
                   <div class="price-content-sale"><span class="salePrice">70
                       <div>руб.</div></span><span>экономия</span></div>
                 </div>
+                <div class="price-footer"><span>Попробуйте сами</span><img src="/images/smile.png"/></div>
               </div>
             </div>
             <div class="swiper-slide">
@@ -36,7 +37,6 @@
                   <div class="price-content-total"><span class="sale">4900</span><span>руб.</span></div>
                   <div class="price-content-button"><span>Хочу сейчас</span></div>
                 </div>
-                <div class="price-footer"><span>Попробуйте сами</span><img src="/images/smile.png"/></div>
               </div>
             </div>
             <div class="swiper-slide">
@@ -67,7 +67,7 @@
                   <div class="price-content-sale"><span class="salePrice">1960
                       <div>руб.</div></span><span>экономия</span></div>
                 </div>
-                <div class="price-footer"><span>Попробуйте сами</span><img src="/images/thumbsup.png"/></div>
+                <div class="price-footer"><span>Лучший выбор</span><img src="/images/thumbsup.png"/></div>
               </div>
             </div>
           </div>
