--- a/src/blocks/index/reviews.html
+++ b/src/blocks/index/reviews.html
@@ -1,5 +1,5 @@
 
-<div class="reviews" id="SectionReviews">
+<div class="reviews">
   <div class="g-wrapper">
     <div class="reviews__container">
       <div class="reviews__container-titles">
