--- a/src/blocks/index/price.html
+++ b/src/blocks/index/price.html
@@ -16,13 +16,15 @@
                 <div class="price-content">
                   <div class="price-content-title">1 день</div>
                   <div class="price-content-subtitle">Цена за 1 день</div>
-                  <div class="price-content-price">700<span>руб.</span></div>
-                  <div class="price-content-subtitle">Общая сумма</div>
-                  <div class="price-content-total"><span class="sale">630</span><span>руб.</span></div>
+                  <div class="price-content-price">700<span>руб</span></div>
+                  <div class="price-content-subtitle">Цена за 1 день со скидкой</div>
+                  <div class="price-content-saleprice"><span class="salePriceOne">665</span><span>руб</span></div>
+                  <div class="price-content-subtitle">Общая сумма со скидкой</div>
+                  <div class="price-content-total"><span class="sale">630</span><span>руб</span></div>
                   <div class="price-content-button"><span>Хочу сейчас</span></div>
                   <div class="price-content-saletext"><span>10 %</span><span>скидка</span></div>
                   <div class="price-content-sale"><span class="salePrice">70
-                      <div>руб.</div></span><span>экономия</span></div>
+                      <div>руб</div></span><span>экономия</span></div>
                 </div>
                 <div class="price-footer"><span>Попробуйте сами</span><img src="/images/smile.png"/></div>
               </div>
@@ -32,9 +34,11 @@
                 <div class="price-content">
                   <div class="price-content-title">7 дней</div>
                   <div class="price-content-subtitle">Цена за 1 день</div>
-                  <div class="price-content-price">700<span>руб.</span></div>
-                  <div class="price-content-subtitle">Общая сумма</div>
-                  <div class="price-content-total"><span class="sale">4900</span><span>руб.</span></div>
+                  <div class="price-content-price">700<span>руб</span></div>
+                  <div class="price-content-subtitle">Цена за 1 день со скидкой</div>
+                  <div class="price-content-saleprice"><span class="salePriceOne">700</span><span>руб</span></div>
+                  <div class="price-content-subtitle">Общая сумма со скидкой</div>
+                  <div class="price-content-total"><span class="sale">4900</span><span>руб</span></div>
                   <div class="price-content-button"><span>Хочу сейчас</span></div>
                 </div>
               </div>
@@ -44,13 +48,15 @@
                 <div class="price-content">
                   <div class="price-content-title">14 дней</div>
                   <div class="price-content-subtitle">Цена за 1 день</div>
-                  <div class="price-content-price">700<span>руб.</span></div>
-                  <div class="price-content-subtitle">Общая сумма</div>
-                  <div class="price-content-total"><span class="sale">9310</span><span>руб.</span></div>
+                  <div class="price-content-price">700<span>руб</span></div>
+                  <div class="price-content-subtitle">Цена за 1 день со скидкой</div>
+                  <div class="price-content-saleprice"><span class="salePriceOne">665</span><span>руб</span></div>
+                  <div class="price-content-subtitle">Общая сумма со скидкой</div>
+                  <div class="price-content-total"><span class="sale">9310</span><span>руб</span></div>
                   <div class="price-content-button"><span>Хочу сейчас</span></div>
                   <div class="price-content-saletext"><span>5 %</span><span>скидка</span></div>
                   <div class="price-content-sale"><span class="salePrice">980
-                      <div>руб.</div></span><span>экономия</span></div>
+                      <div>руб</div></span><span>экономия</span></div>
                 </div>
               </div>
             </div>
@@ -59,13 +65,15 @@
                 <div class="price-content">
                   <div class="price-content-title">28 дней</div>
                   <div class="price-content-subtitle">Цена за 1 день</div>
-                  <div class="price-content-price">700<span>руб.</span></div>
-                  <div class="price-content-subtitle">Общая сумма</div>
-                  <div class="price-content-total"><span class="sale">17460</span><span>руб.</span></div>
+                  <div class="price-content-price">700<span>руб</span></div>
+                  <div class="price-content-subtitle">Цена за 1 день со скидкой</div>
+                  <div class="price-content-saleprice"><span class="salePriceOne">665</span><span>руб</span></div>
+                  <div class="price-content-subtitle">Общая сумма со скидкой</div>
+                  <div class="price-content-total"><span class="sale">17460</span><span>руб</span></div>
                   <div class="price-content-button"><span>Хочу сейчас</span></div>
                   <div class="price-content-saletext"><span>10 %</span><span>скидка</span></div>
                   <div class="price-content-sale"><span class="salePrice">1960
-                      <div>руб.</div></span><span>экономия</span></div>
+                      <div>руб</div></span><span>экономия</span></div>
                 </div>
                 <div class="price-footer"><span>Лучший выбор</span><img src="/images/thumbsup.png"/></div>
               </div>
